[package]
name = "concurFileDownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  # For async runtime
reqwest = { version = "0.11", features = ["json", "stream"] }  # For HTTP requests
clap = { version = "4.0" }  # For CLI argument parsing
indicatif = "0.16"
futures = "0.3.31"  # For progress bars

